[package]
name = "bcl"
version = "0.1.0"
edition = "2021"
authors = ["Bob Hyman <bob.hyman@gmail.com>"]
description = "Bob's command language, a portable command language interpreter"
license = "GPL-3.0-or-later"
keywords = ["command-line", "shell", "scripting"]
categories = ["command-line-interface"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
